# faceit_api

./: Cargo.toml  README.md
src/: client.rs  democracy.rs  humanize.rs  lib.rs  mapping.rs  matches.rs  nickname.rs  player_info.rs  rate_limit.rs  room.rs  room_stats.rs  search.rs  shared.rs  stats.rs  types.rs
