[package]
name = "faceit_api"
version = "0.1.0"
edition = "2021"
description = "faceit api wrapper"
authors = ["cryeprecision#8008"]
repository = "https://github.com/oof-software/faceit_api"
readme = "README.md"
keywords = ["faceit", "api"]
include = ["src/", "README.md"]

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls"] } # make web-requests
serde = { version = "1.0.143", features = ["derive"] } # seralization
serde_json = { version = "1.0.83" } # de-/serialize json data
tokio = { version = "1.20.1", features = ["time"], default-features = false } # async runtime
futures = { version = "0.3.23" } # concurrency helper
chrono = { version = "0.4.19", features = ["serde"] } # time and date stuff
# dotenv = { version = "0.15.0" } # use .env file for config
thiserror = { version = "1.0.35" } # define custom errors
# scraper = { version = "0.13.0", optional = true } # parse html
# indicatif = { version = "0.17.0" } # progress bars
number_prefix = { version = "0.4.0" }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] } # async runtime
